--- a/portfolio.html
+++ b/portfolio.html
@@ -287,7 +287,7 @@
                   <img src="tushar.jpeg" alt="" />
                   <h3>Tushar</h3>
                   <p>
-                    my name is Tushar Kumar I am pursing b tech function up
+                    my name is Tushar Kumar I am pursing b tech Polaris
                     school of technologyI am is a dynamic individual currently
                     pursuing his Bachelor's degree in Technology. <br /><br />
                     In addition to my technical skills. I understand the
