--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
               ></a>
             </div>
 
-            <a href="resume.pdf" class="btn">Resume</a>
+            <a href="Tushar Updated Resume.pdf" class="btn">Resume</a>
           </div>
 
           <div class="profession-container">
